# black-hole-organizer

./: README.md  pyproject.toml
src/exceptions/: system.py
src/js_interpreter/: constants.py  interpreter.py  node_installer_windows.py
src/settings/: __init__.py  _application.py
src/utils/: __init__.py  _file.py  temp.py
src/utils/decorators/: __init__.py  _save_call_func_infos.py
src/utils/logger/: __init__.py  _logger.py
src/utils/unzip/: _unzipper.py
